--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="section">
       <h2>Download My CV</h2>
-      <p><a href="Harry_Dickenson_CV.pdf" download>Click here to download my CV (PDF)</a></p>
+      <p><a href="Harry_Dickenson_CV.pdf" download>Download Harry Dickenson's CV (PDF)</a></p>
     </div>
 
     <div class="section">
