--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,10 +9,10 @@
   <title>Harry Lucas Dickenson - Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background-color: #e8f0fe;
       color: #333;
       line-height: 1.6;
     }
