--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,7 +8,7 @@
   <title>Harry Lucas Dickenson - Portfolio</title>
   <style>
     body {
-      font-family: 'Roboto', sans-serif;
+      font-family: Times New Roman, serif;
       margin: 0;
       padding: 0;
       background-color: #e8f0fe;
