--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h1, h2 {
+      color: #125798;
       text-align: center;
     }
     a {
