--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <div class="container">
     <h1>Harry Lucas Dickenson</h1>
-    <p style="text-align: center;"> <strong>MSC Marketing Graduate | Creative Thinker | Great Team-worker | Skilled Communicator</strong></p>
+    <p style="font-size: 20px;text-align: center;"> <strong>MSC Marketing Graduate | Creative Thinker | Great Team-worker | Skilled Communicator</strong></p>
 
     <div class="section">
       <h2>About Me</h2>
