--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Harry Lucas Dickenson - Portfolio</title>
   <style>
     body {
-      font-family: Times New Roman, serif;
+      font-family: Helvetica, serif;
       margin: 0;
       padding: 0;
       background-color: #e8f0fe;
