--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
     <div class="section">
       <h2>Portfolio</h2>
       <ul>
-        <li><a href="IMC Assessment.pdf" download>IMC Assessment Report</a></li>
+         <li>
+            <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
+            <p class="portfolio-description">Compares marketing communications used by two major UK retailers, including analysis of traditional and digital channels, loyalty schemes, and audience segmentation.</p>
+        </li>
       </ul>
     </div>
   </div>
