--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
       width: 100%;
       height: 100%;
     }
+    .portfolio-item {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
+  background-color: #fdfdfd;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+}
+.portfolio-item a {
+  font-weight: bold;
+  font-size: 16px;
+  color: #1a0dab;
+}
+.portfolio-item p {
+  font-size: 14px;
+  margin-top: 8px;
+  color: #444;
+}
   </style>
 </head>
 <body>
@@ -74,12 +92,10 @@
 
     <div class="section">
       <h2>Portfolio</h2>
-      <ul>
-         <li>
-            <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
-            <p class="portfolio-description">Compares marketing communications used by two major UK retailers, including analysis of traditional and digital channels, loyalty schemes, and audience segmentation.</p>
-        </li>
-      </ul>
+         <div class="portfolio-item">
+          <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
+          <p>An in-depth report comparing Tesco and Marks & Spencer's communication strategies for my Integrated Marketing Communications module.</p>
+          </div>
     </div>
   </div>
 </body>
