--- a/index.html
+++ b/index.html
@@ -68,8 +68,32 @@
   margin-top: 8px;
   color: #444;
 }
+    .site-footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #f0f0f0;
+  font-size: 14px;
+  color: #444;
+  border-top: 1px solid #ccc;
+  margin-top: 50px;
+}
+
+.site-footer a {
+  color: #1a0dab;
+  text-decoration: none;
+}
+
+.site-footer a:hover {
+  text-decoration: underline;
+}
   </style>
 </head>
+<footer class="site-footer">
+  <p>📧 <a href="mailto:harrydickenson890@gmail.com">harrydickenson890@gmail.com</a> |
+     📞 +44 (0)7985 579 323 |
+     <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
+  </p>
+</footer>
 <body>
   <div class="container">
     <h1>Harry Lucas Dickenson</h1>
