--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
           <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
           <p>An in-depth report comparing Tesco and Marks & Spencer's communication strategies for my Integrated Marketing Communications module.</p>
           </div>
+          <div class="portfolio-item">
+          <a href="Group 7 - Mulberry.pdf" download>Marketing Strategy Presentation – Mulberry</a>
+          <p>A strategic marketing presentation developed for Mulberry, focusing on sustainable branding, international expansion, and Gen Z consumer engagement. Created as a group project for our Marketing Strategy module.</p>
+          </div>
     </div>
   </div>
 </body>
