--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   </div>
 </body>
 <footer class="site-footer">
+  <h2><strong>Contact Info:</strong></h2>
   <p>📧 <a href="mailto:harrydickenson890@gmail.com">harrydickenson890@gmail.com</a> |
      📞 +44 (0)7985 579 323 |
      <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
