--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
 .site-footer a:hover {
   text-decoration: underline;
 }
+    .site-footer p:last-child {
+  font-size: 13px;
+  color: #666;
+}
     .sticky-bar {
   position: sticky;
   top: 0;
@@ -159,6 +163,15 @@
   <p>📧 <a href="mailto:harrydickenson890@gmail.com">harrydickenson890@gmail.com</a> |
      📞 +44 (0)7985 579 323 |
      <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
+  </p>
+  
+  <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #ccc;" />
+
+  <p>
+    💻 <strong>View the source code:</strong>
+    <a href="https://github.com/HarryDickenson/harrydickenson.github.io" target="_blank">GitHub Repository
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="height: 20px; vertical-align: middle;">
+    </a>
   </p>
 </footer>
 </html>
