--- a/index.html
+++ b/index.html
@@ -168,10 +168,11 @@
   <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #ccc;" />
 
   <p>
-    💻 <strong>View the source code:</strong>
-    <a href="https://github.com/HarryDickenson/harrydickenson.github.io" target="_blank">GitHub Repository
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="height: 20px; vertical-align: middle;">
-    </a>
-  </p>
+  💻 <strong>View the source code:</strong>
+  <a href="https://github.com/HarryDickenson/harrydickenson.github.io" target="_blank">
+    GitHub Repository
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="height: 20px; vertical-align: middle; margin-left: 5px;">
+  </a>
+</p>
 </footer>
 </html>
