--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
   text-decoration: none;
   font-weight: bold;
 }
+nav a:hover {
+  color: #00223b
+}
 
 .sticky-bar nav a:hover {
   text-decoration: underline;
