--- a/index.html
+++ b/index.html
@@ -109,12 +109,10 @@
   text-decoration: none;
   font-weight: bold;
 }
-nav a:hover {
-  color: #00223b
-}
 
 .sticky-bar nav a:hover {
   text-decoration: underline;
+  color: #00223b;
 }
   </style>
 </head>
