--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #e8f0fe;
-      color: #333;
+      background-color: #F9FAFB;
+      color: #FFFFFF;
       line-height: 1.6;
     }
     .container {
@@ -24,7 +24,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h1, h2 {
-      color: #125798;
+      color: #111827;
       text-align: center;
     }
     a {
@@ -61,7 +61,7 @@
 .portfolio-item a {
   font-weight: bold;
   font-size: 16px;
-  color: #1a0dab;
+  color: #111827;
 }
 .portfolio-item p {
   font-size: 14px;
