--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,10 +9,11 @@
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #F9FAFB;
-      color: #FFFFFF;
+      background-color: #F9FAFB; /* Soft White */
+      color: #111827; /* Charcoal */
       line-height: 1.6;
     }
+
     .container {
       max-width: 800px;
       margin: 50px auto;
@@ -23,26 +22,32 @@
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
+
     h1, h2 {
-      color: #111827;
+      color: #111827; /* Charcoal */
       text-align: center;
     }
+
     a {
-      color: #0077cc;
+      color: #3B82F6; /* Blueberry */
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     .section {
       margin-top: 30px;
     }
+
     .video-container {
       position: relative;
       padding-bottom: 56.25%;
       height: 0;
       overflow: hidden;
     }
+
     .video-container iframe {
       position: absolute;
       top: 0;
@@ -50,87 +55,95 @@
       width: 100%;
       height: 100%;
     }
+
     .portfolio-item {
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 15px;
-  margin-bottom: 20px;
-  background-color: #fdfdfd;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-}
-.portfolio-item a {
-  font-weight: bold;
-  font-size: 16px;
-  color: #111827;
-}
-.portfolio-item p {
-  font-size: 14px;
-  margin-top: 8px;
-  color: #444;
-}
+      border: 1px solid #E5E7EB; /* Cool Grey */
+      border-radius: 10px;
+      padding: 15px;
+      margin-bottom: 20px;
+      background-color: #ffffff;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+    }
+
+    .portfolio-item a {
+      font-weight: bold;
+      font-size: 16px;
+      color: #111827;
+    }
+
+    .portfolio-item p {
+      font-size: 14px;
+      margin-top: 8px;
+      color: #6B7280; /* Slate Grey */
+    }
+
     .site-footer {
-  text-align: center;
-  padding: 20px;
-  background-color: #f0f0f0;
-  font-size: 14px;
-  color: #444;
-  border-top: 1px solid #ccc;
-  margin-top: 50px;
-}
+      text-align: center;
+      padding: 20px;
+      background-color: #F9FAFB; /* Soft White */
+      font-size: 14px;
+      color: #6B7280; /* Slate Grey */
+      border-top: 1px solid #E5E7EB;
+      margin-top: 50px;
+    }
 
-.site-footer a {
-  color: #1a0dab;
-  text-decoration: none;
-}
+    .site-footer a {
+      color: #3B82F6;
+      text-decoration: none;
+    }
 
-.site-footer a:hover {
-  text-decoration: underline;
-}
+    .site-footer a:hover {
+      text-decoration: underline;
+    }
+
     .site-footer p:last-child {
-  font-size: 13px;
-  color: #666;
-}
+      font-size: 13px;
+      color: #6B7280;
+    }
+
     .sticky-bar {
-  position: sticky;
-  top: 0;
-  background-color: #ffffff;
-  border-bottom: 1px solid #ccc;
-  padding: 10px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-}
+      position: sticky;
+      top: 0;
+      background-color: #ffffff;
+      border-bottom: 1px solid #E5E7EB;
+      padding: 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
 
-.sticky-bar nav a {
-  margin-left: 15px;
-  color: #0077cc;
-  text-decoration: none;
-  font-weight: bold;
-}
+    .sticky-bar nav a {
+      margin-left: 15px;
+      color: #3B82F6;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
-.sticky-bar nav a:hover {
-  text-decoration: underline;
-  color: #00223b;
-}
+    .sticky-bar nav a:hover {
+      text-decoration: underline;
+      color: #1E40AF; /* darker Blueberry */
+    }
   </style>
 </head>
 <body>
   <div class="sticky-bar">
-  <span>Harry Lucas Dickenson</span>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</div>
+    <span>Harry Lucas Dickenson</span>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
 
   <div class="container">
     <h1>Harry Lucas Dickenson</h1>
-    <p style="font-size: 18px;text-align: center;"> <strong>MSC Marketing Graduate | Creative Thinker | Great Team-worker | Skilled Communicator</strong></p>
+    <p style="font-size: 18px; text-align: center;">
+      <strong>MSC Marketing Graduate | Creative Thinker | Great Team-worker | Skilled Communicator</strong>
+    </p>
 
-    <div class="section" id= "about me">
+    <div class="section" id="about me">
       <h2>About Me</h2>
       <p>Hi, I'm Harry — a master's graduate and passionate marketer who thrives on creativity and continuous learning. This website is a snapshot of who I am and showcases the projects I've worked on so far.</p>
     </div>
@@ -147,33 +160,34 @@
 
     <div class="section" id="portfolio">
       <h2>Portfolio</h2>
-         <div class="portfolio-item">
-          <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
-          <p>An in-depth report comparing Tesco and Marks & Spencer's communication strategies for my Integrated Marketing Communications module.</p>
-          </div>
-          <div class="portfolio-item">
-          <a href="Group 7 - Mulberry.pdf" download>Marketing Strategy Presentation – Mulberry</a>
-          <p>A strategic marketing presentation developed for Mulberry, focusing on sustainable branding, international expansion, and Gen Z consumer engagement. Created as a group project for our Marketing Strategy module.</p>
-          </div>
+      <div class="portfolio-item">
+        <a href="IMC Assessment.pdf" download>IMC Assessment – Tesco & M&S</a>
+        <p>An in-depth report comparing Tesco and Marks & Spencer's communication strategies for my Integrated Marketing Communications module.</p>
+      </div>
+      <div class="portfolio-item">
+        <a href="Group 7 - Mulberry.pdf" download>Marketing Strategy Presentation – Mulberry</a>
+        <p>A strategic marketing presentation developed for Mulberry, focusing on sustainable branding, international expansion, and Gen Z consumer engagement. Created as a group project for our Marketing Strategy module.</p>
+      </div>
     </div>
   </div>
+
+  <footer class="site-footer" id="contact">
+    <h2><strong>Contact Info:</strong></h2>
+    <p>
+      📧 <a href="mailto:harrydickenson890@gmail.com">harrydickenson890@gmail.com</a> |
+      📞 +44 (0)7985 579 323 |
+      <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
+    </p>
+
+    <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #E5E7EB;" />
+
+    <p>
+      💻 <strong>View the source code:</strong>
+      <a href="https://github.com/HarryDickenson/harrydickenson.github.io" target="_blank">
+        GitHub Repository
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="height: 20px; vertical-align: middle; margin-left: 5px;">
+      </a>
+    </p>
+  </footer>
 </body>
-
-<footer class="site-footer" id="contact">
-  <h2><strong>Contact Info:</strong></h2>
-  <p>📧 <a href="mailto:harrydickenson890@gmail.com">harrydickenson890@gmail.com</a> |
-     📞 +44 (0)7985 579 323 |
-     <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
-  </p>
-  
-  <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #ccc;" />
-
-  <p>
-  💻 <strong>View the source code:</strong>
-  <a href="https://github.com/HarryDickenson/harrydickenson.github.io" target="_blank">
-    GitHub Repository
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" style="height: 20px; vertical-align: middle; margin-left: 5px;">
-  </a>
-</p>
-</footer>
 </html>
