--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #F9FAFB; /* Soft White */
-      color: #111827; /* Charcoal */
+      background-color: #e4e4e4;
+      color: #323b4c;
       line-height: 1.6;
     }
 
@@ -18,18 +18,18 @@
       max-width: 800px;
       margin: 50px auto;
       padding: 20px;
-      background: white;
+      background: #ffffff;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
 
     h1, h2 {
-      color: #111827; /* Charcoal */
+      color: #323b4c;
       text-align: center;
     }
 
     a {
-      color: #3B82F6; /* Blueberry */
+      color: #3B82F6;
       text-decoration: none;
     }
 
@@ -57,7 +57,7 @@
     }
 
     .portfolio-item {
-      border: 1px solid #E5E7EB; /* Cool Grey */
+      border: 1px solid #ccc;
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 20px;
@@ -68,22 +68,22 @@
     .portfolio-item a {
       font-weight: bold;
       font-size: 16px;
-      color: #111827;
+      color: #323b4c;
     }
 
     .portfolio-item p {
       font-size: 14px;
       margin-top: 8px;
-      color: #6B7280; /* Slate Grey */
+      color: #323b4c;
     }
 
     .site-footer {
       text-align: center;
       padding: 20px;
-      background-color: #F9FAFB; /* Soft White */
+      background-color: #e4e4e4;
       font-size: 14px;
-      color: #6B7280; /* Slate Grey */
-      border-top: 1px solid #E5E7EB;
+      color: #323b4c;
+      border-top: 1px solid #ccc;
       margin-top: 50px;
     }
 
@@ -98,14 +98,14 @@
 
     .site-footer p:last-child {
       font-size: 13px;
-      color: #6B7280;
+      color: #323b4c;
     }
 
     .sticky-bar {
       position: sticky;
       top: 0;
-      background-color: #ffffff;
-      border-bottom: 1px solid #E5E7EB;
+      background-color: #e4e4e4;
+      border-bottom: 1px solid #ccc;
       padding: 10px 20px;
       display: flex;
       justify-content: space-between;
@@ -123,7 +123,7 @@
 
     .sticky-bar nav a:hover {
       text-decoration: underline;
-      color: #1E40AF; /* darker Blueberry */
+      color: #1E40AF;
     }
   </style>
 </head>
@@ -179,7 +179,7 @@
       <a href="https://www.linkedin.com/in/harry-dickenson-aa5b8b242/" target="_blank">LinkedIn</a>
     </p>
 
-    <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #E5E7EB;" />
+    <hr style="margin: 20px auto; width: 60%; border: none; border-top: 1px solid #ccc;" />
 
     <p>
       💻 <strong>View the source code:</strong>
