--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 20px;
-      background-color: #ffffff;
+      background-color: #e6e3dd;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
 
