--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     .sticky-bar {
       position: sticky;
       top: 0;
-      background-color: #e4e4e4;
+      background-color: #323b4c;
       border-bottom: 1px solid #ccc;
       padding: 10px 20px;
       display: flex;
