--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       position: sticky;
       top: 0;
       background-color: #323b4c;
+      color: #ffffff;
       border-bottom: 1px solid #ccc;
       padding: 10px 20px;
       display: flex;
@@ -116,14 +117,14 @@
 
     .sticky-bar nav a {
       margin-left: 15px;
-      color: #3B82F6;
+      color: #ffffff;
       text-decoration: none;
       font-weight: bold;
     }
 
     .sticky-bar nav a:hover {
       text-decoration: underline;
-      color: #1E40AF;
+      color: #e5e7eb;
     }
   </style>
 </head>
