--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <span>Harry Lucas Dickenson</span>
     <nav>
       <a href="index.html">Home</a>
+      <a href="CV">CV</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
