--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   <div class="sticky-bar">
     <span id="stickyTitle" class="hidden">Harry Lucas Dickenson</span>
     <nav id="stickyNav" class="hidden">
+      <a href="#">Home</a>
     </nav>
   </div>
   <script>
