--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
   visibility: visible;
   opacity: 1;
 }
+    #stickyTitle {
+  visibility: visible !important;
+  opacity: 1 !important;
+}
 
     .floating-cv-button {
   position: fixed;
