--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
   position: sticky;
   top: 0;
   background-color: #323b4c;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: bold;
   border-bottom: 1px solid #ccc;
   padding: 10px 20px;
   display: flex;
@@ -136,10 +139,7 @@
   visibility: visible;
   opacity: 1;
 }
-    #stickyTitle {
-  visibility: visible !important;
-  opacity: 1 !important;
-}
+ 
 
     .floating-cv-button {
   position: fixed;
